# HACA

./: .gitignore  README.md
experiments/fcp-ref-python/fcp_mcp/: pyproject.toml
implementations/fcp-core-ref/: .gitignore  ARCHITECTURE.md  BOOT.md  README.md  boot.md  fcp  fcp-core  fcp-tui.sh  pyproject.toml  sil.sh
implementations/fcp-core-ref/core/: __init__.py  acp.py  boot.py  cli.py  cpe.py  cpe.sh  exec.sh  exec_.py  fap.py  fs.py  hooks.py  mil.py  mil.sh  operator.py  session.py  sil.py  sil.sh  sil_helpers.py  tui.py  ui.py
implementations/fcp-core-ref/fcp_core/: __init__.py  acp.py  boot.py  cli.py  compliance.py  decommission.py  exec_.py  fap.py  formats.py  hooks.py  mil.py  operator.py  session.py  sil.py  sleep.py  store.py  vital.py
implementations/fcp-core-ref/persona/: 00-base.md  constraints.md  identity.md  values.md
implementations/fcp-core-ref/skills/: index.json
implementations/fcp-core-ref/state/: baseline.json  drift-pool.jsonl  drift-probes.jsonl  integrity.json
implementations/fcp-core-ref/tests/: helpers.py  test_boot.py  test_cmi_channel.py  test_compliance.py  test_exec.py  test_fap.py  test_mil.py  test_session.py  test_sleep.py
implementations/fcp-ref/: .gitignore  boot.md  fcp  install.sh  pyproject.toml
implementations/fcp-ref/docs/: CPE_ANALYSIS_INDEX.md  CPE_TECHNICAL_SUMMARY.txt  Data-Flow-Analysis.md  FCP-Core-1.0.0.md
implementations/fcp-ref/fcp_base/: acp.py  approval.py  boot.py  cli.py  compliance.py  decommission.py  dispatch.py  exec_.py  exec_permissions.py  fap.py  formats.py  hooks.py  mil.py  operator.py  session.py  session_mode.py  sil.py  sleep.py  stimuli.py  store.py  tools.py  ui.py  vital.py
implementations/fcp-ref/fcp_mcp/: CLAUDE_CODE_SETUP.md  README.md  TEST_PLAN_MCP_LOOP.md  __init__.py
implementations/fcp-ref/skills/: index.json
implementations/fcp-ref/tests/: helpers.py  test_approval.py  test_cli.py  test_cmi_channel.py  test_cmi_dispatch.py  test_cmi_identity.py  test_cmi_peer_add.py  test_compliance.py  test_cpe_adapters.py  test_exec.py  test_fap.py  test_file_skills.py  test_git_guard.py  test_mil.py  (+7 more)
(+479 files in other folders)
