[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fcp-core"
version = "0.1.0"
description = "Filesystem Cognitive Platform — Core Profile (HACA-Core reference implementation)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
fcp-core = "fcp_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fcp_core*"]
