[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fcp"
version = "0.1.0"
description = "Filesystem Cognitive Platform — reference implementation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
fcp = "fcp_base.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fcp_base*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]
